--- a/index.html
+++ b/index.html
@@ -6,29 +6,29 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
         <link href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css" rel="stylesheet">
-        <link rel="stylesheet" href="./css/styles.css">
+        <link rel="stylesheet" href="./css/main.min.css">
     </head>    
     <body>
         <header class="header">
-            <div class="header-box container">
-                <nav class="nav-box">
-                    <a href="./index.html" lang="en" class="logo link"><span class="logo-accent">Web</span>Studio</a>
-                    <ul class="list nav-list">
-                        <li><a href="./index.html" class="nav active link">Студія</a></li>
-                        <li><a href="./portfolio.html" class="nav link">Портфоліо</a></li>
-                        <li><a href="#" class="nav link">Контакти</a></li>
+            <div class="header__box">
+                <nav class="navigation">
+                    <a href="./index.html" lang="en" class="logo"><span class="logo--accent">Web</span>Studio</a>
+                    <ul class="navigation__list">
+                        <li class="navigation__item"><a href="./index.html" class="navigation__link navigation__link--active">Студія</a></li>
+                        <li class="navigation__item"><a href="./portfolio.html" class="navigation__link">Портфоліо</a></li>
+                        <li class="navigation__item"><a href="#" class="navigation__link">Контакти</a></li>
                     </ul>
                 </nav>
-                <ul class="list header-contacts">
-                    <li><a href="mailto:info@devstudio.com" class="nav info link">
-                        <svg class="header-icon" width="16" height="12">
+                <ul class="header-contacts">
+                    <li class="header-contacts__item"><a href="mailto:info@devstudio.com" class="header-contacts__link">
+                        <svg class="header-contacts__icon" width="16" height="12">
                             <use href="./images/icons.svg#icon-envelope"></use>
                         </svg>
                             info@devstudio.com
                         </a>
                     </li>
-                    <li><a href="tel:+390961111111" class="nav info link">
-                        <svg class="header-icon" width="10" height="16">
+                    <li class="header-contacts__item"><a href="tel:+390961111111" class="header-contacts__link">
+                        <svg class="header-contacts__icon" width="10" height="16">
                             <use href="./images/icons.svg#icon-smartphone"></use>
                         </svg>
                             +38 096 111 11 11
@@ -342,11 +342,11 @@
             <div class="container">
                 <div class="footer-container">
                     <div>
-                        <a href="./index.html" lang="en" class="logo logo-alt link"><span class="logo-accent">Web</span>Studio</a>
+                        <a href="./index.html" lang="en" class="logo logo--white link"><span class="logo--accent">Web</span>Studio</a>
                         <address>
                             <ul class="list">
                                 <li><a href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9" rel="noopener nofollow noreferrer"
-                                        class="info-desc logo-alt link">м. Київ, пр-т Лесі Українки, 26</a></li>
+                                        class="info-desc logo--white link">м. Київ, пр-т Лесі Українки, 26</a></li>
                                 <li><a href="mailto:info@devstudio.com" class="info-desc contact link">info@devstudio.com</a></li>
                                 <li><a href="tel:+380961111111" class="info-desc contact link">+38 096 111 11 11</a></li>
                             </ul>
