Додає БЕМ і SCSS для hero

--- a/index.html
+++ b/index.html
@@ -39,12 +39,12 @@
         </header>
 
         <main>
-            <section class="dark hero hero-content">
-                <div class="container">
-                        <h1 class="hero-title">
+            <section class="hero">
+                <div class="hero__box">
+                        <h1 class="hero__title">
                             Ефективні рішення для </br>вашого бізнесу
                         </h1>
-                        <button type="button" class="btn hero-btn" data-modal-open>Замовити послугу</button>
+                        <button type="button" class="btn hero__btn" data-modal-open>Замовити послугу</button>
                 </div>
             </section>
 
