Додає БЕМ і SASS для advantage

--- a/index.html
+++ b/index.html
@@ -48,47 +48,47 @@
                 </div>
             </section>
 
-            <section class="section">
-                <div class="container">
-                    <h2 class="title visually-hidden">
+            <section class="advantage">
+                <div class="advantage__box">
+                    <h2 class="advantage__title">
                         Переваги
                     </h2>
-                    <ul class="list advantage-list">
+                    <ul class="advantage__list">
                         <li class="advantage-item">
-                            <div class="advantage-icon-bg">
+                            <div class="advantage-icon__bg">
                                 <svg class="advantage-icon">
                                     <use href="./images/icons.svg#icon-antenna"></use>
                                 </svg>
                             </div>
-                            <h3 class="title advantage">Увага до деталей</h3>
-                            <p class="advantage-desc">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
+                            <h3 class="advantage-item__title">Увага до деталей</h3>
+                            <p class="advantage-item__desc">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
                         </li>
                         <li class="advantage-item">
-                            <div class="advantage-icon-bg">
+                            <div class="advantage-icon__bg">
                                 <svg class="advantage-icon">
                                     <use href="./images/icons.svg#icon-clock"></use>
                                 </svg>
                             </div>
-                            <h3 class="title advantage">Пунктуальність</h3>
-                            <p class="advantage-desc">Завдання організації, особливо рамки і місце навчання кадрів тягне в себе.</p>
+                            <h3 class="advantage-item__title">Пунктуальність</h3>
+                            <p class="advantage-item__desc">Завдання організації, особливо рамки і місце навчання кадрів тягне в себе.</p>
                         </li>
                         <li class="advantage-item">
-                            <div class="advantage-icon-bg">
+                            <div class="advantage-icon__bg">
                                 <svg class="advantage-icon">
                                     <use href="./images/icons.svg#icon-diagram"></use>
                                 </svg>
                             </div>
-                            <h3 class="title advantage">Планування</h3>
-                            <p class="advantage-desc">Так само консультація з широким активом значною мірою зумовлює.</p>
+                            <h3 class="advantage-item__title">Планування</h3>
+                            <p class="advantage-item__desc">Так само консультація з широким активом значною мірою зумовлює.</p>
                         </li>
                         <li class="advantage-item">
-                            <div class="advantage-icon-bg">
+                            <div class="advantage-icon__bg">
                                 <svg class="advantage-icon">
                                     <use href="./images/icons.svg#icon-astronaut"></use>
                                 </svg>
                             </div>
-                            <h3 class="title advantage">Сучасні технології</h3>
-                            <p class="advantage-desc">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
+                            <h3 class="advantage-item__title">Сучасні технології</h3>
+                            <p class="advantage-item__desc">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
                         </li>
                     </ul>
                 </div>
